--- a/8.Geohydrological Applications/1. PCRasters/environment.yml
+++ b/8.Geohydrological Applications/1. PCRasters/environment.yml
@@ -12,4 +12,4 @@ dependencies:
   - scikit-learn
   - pycrs
   - matplotlib
-prefix: C:\Users\hansa\.conda\envs\pcraster37
+prefix: C:\Users\okomo\.conda\envs\pcraster37
